# contabilidad

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
asientos_contables/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
asientos_contables/migrations/: 0001_initial.py  0002_add_timestamp_fields.py
asientos_contables/static/metronic/: metronic.css  metronic.js
asientos_contables/templates/asientos_contables/: base.html
asientos_contables/templates/asientos_contables/asientos/: list.html
asientos_contables/templates/asientos_contables/asientos/partials/: detail.html  form.html  list_items.html
asientos_contables/templates/asientos_contables/cuentas/: list.html
asientos_contables/templates/asientos_contables/cuentas/partials/: delete_confirm.html  form.html  list_items.html
asientos_contables/tests/: test_asiento_contable.py  test_cuenta_contable.py
contabilidad/: asgi.py  settings.py  urls.py  wsgi.py
